feat: Upgrade OpenAI SDK to v4.6.0 and add reasoning support